NOTES IN GDP CHAPTER

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -8,6 +8,63 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
+-   [Exploration of the Formative Learning Design
+    Process](#exploration-of-the-formative-learning-design-process)
+    -   [Research Questions - Feb 2023](#research-questions---feb-2023)
+    -   [Chapter Introduction](#chapter-introduction)
+    -   [Vignette illustrating shifts in scope of
+        activity](#vignette-illustrating-shifts-in-scope-of-activity)
+        -   [Vignette 4.1 - An example of game making
+            activity](#vignette-4.1---an-example-of-game-making-activity)
+            -   [Table of Vignette](#table-of-vignette)
+        -   [Description of levels of activity illustrated using the
+            vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
+            -   [Environmental factors and
+                objectives](#environmental-factors-and-objectives)
+            -   [Larger objective - Making games for an
+                audience](#larger-objective---making-games-for-an-audience)
+            -   [Mid-level objective - Constructing a game feature by
+                feature](#mid-level-objective---constructing-a-game-feature-by-feature)
+            -   [Smaller objectives and actions - Implementing discrete
+                code and design
+                structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
+    -   [Conflicts and design tensions experienced by participants and
+        facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
+        -   [Conflicts due to identity clashes and dysfunctional group
+            work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
+        -   [3. Tensions due to lack of access and familiarity to game
+            programming
+            tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
+            -   [Design adaptations to facilitate novice use of a code
+                playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
+            -   [Addressing code syntax
+                errors](#addressing-code-syntax-errors)
+            -   [Distributed vs. self-contained approaches to asset
+                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
+            -   [Remixing and showcasing
+                projects](#remixing-and-showcasing-projects)
+            -   [Design choices of the starter game
+                template](#design-choices-of-the-starter-game-template)
+            -   [Observations on the game template and core
+                tools](#observations-on-the-game-template-and-core-tools)
+        -   [Participant conflict associated with project navigation and
+            use of
+            documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+            -   [Quick Start Cards](#quick-start-cards)
+            -   [Code snippet examples](#code-snippet-examples)
+            -   [Structuring instructional tutorial
+                chapters](#structuring-instructional-tutorial-chapters)
+            -   [Theming the a collection of game design patterns to aid
+                navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+    -   [Chapter Discussion](#chapter-discussion)
+        -   [Discussion on authenticity and agency concerning tools and
+            resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
+        -   [Summary of barriers and tensions explored in this
+            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
+        -   [Link to next chapter](#link-to-next-chapter)
+
+
+
 # Exploration of the Formative Learning Design Process
 
 ## Research Questions - Feb 2024
@@ -203,13 +260,13 @@ Moving beyond wider activity systems, the overarching activity system of the gam
 
 <!-- Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0 -->
 
-![Illustration 4.x - Larger objectives at game making level ](./Pictures/At_dia_2_v1.png){width=95%}
+![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_2_v1.png){width=95%}
 
 There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where the created games are shared in arcade cabinets at the end of the programme. An additional audience are friends and family who can be send the games to play online. The more immediate audience for the evolving games are peer game makers during the making sessions.
 
 ![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater3.jpg){width=75%}
 
-While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level. In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. A different example of the tension between competing motivations at this larger level of activity is explored in example 1 of this chapter and related analysis is continued in chapter six. In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
+While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level. In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
 
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
