--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -11,6 +11,98 @@ categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
 
+-   [The Use of Gameplay Design Patterns "It's like a project in itself,
+    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
+    -   [Research Questions - Feb 2024](#research-questions---feb-2024)
+    -   [Notes to restructure](#notes-to-restructure)
+    -   [Chapter outline](#chapter-outline)
+    -   [On GDP as a germ-cell and unit of analysis - and chapter
+        outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
+    -   [Study of Vignette A](#study-of-vignette-a)
+        -   [Descriptive Commentary on Vignette
+            A](#descriptive-commentary-on-vignette-a)
+    -   [Observations and analysis of use of Game Design Patterns by
+        participants](#observations-and-analysis-of-use-of-game-design-patterns-by-participants)
+    -   [The role of GDPs in the personal appropriation of
+        computational, design and systems
+        concepts](#the-role-of-gdps-in-the-personal-appropriation-of-computational-design-and-systems-concepts)
+    -   [Guided Participation](#guided-participation)
+        -   [GDPs offer the potential to assist project navigation,
+            acting as a framework for code examples and step-by-step
+            tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
+        -   [GDPs used to scaffold ideation
+            processes](#gdps-used-to-scaffold-ideation-processes)
+            -   [Problem solving practices as a fund of knowledge (but
+                not really
+                GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
+            -   [Paper prototyping mapping visual
+                matrix](#paper-prototyping-mapping-visual-matrix)
+            -   [GDPs as used by participants in their prioritisation in
+                the ideation
+                process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
+        -   [GDPs aiding the process of division of
+            labour](#gdps-aiding-the-process-of-division-of-labour)
+            -   [Working knowledge of different types of GDPs can help
+                participants to divide project elements by
+                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern)
+            -   [Structuring work processes through implementing modular
+                sub-projects in the form of GDPs can aid division of
+                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour)
+            -   [Other notable observations concerning division of
+                labour in the video
+                data](#other-notable-observations-concerning-division-of-labour-in-the-video-data)
+        -   [The role of GDP used in emerging technical
+            processes](#the-role-of-gdp-used-in-emerging-technical-processes)
+            -   [Use of GDPs to facilitate use of
+                tools](#use-of-gdps-to-facilitate-use-of-tools)
+            -   [Diverse use of technical processes driven by
+                GDPs](#diverse-use-of-technical-processes-driven-by-gdps)
+            -   [Use of GDPs in the development of shared
+                language](#use-of-gdps-in-the-development-of-shared-language)
+            -   [Code Patching as a guided
+                process](#code-patching-as-a-guided-process)
+            -   [GDPs used to nurture tactical responses to coding
+                errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
+            -   [Concluding remarks on debugging and
+                revision](#concluding-remarks-on-debugging-and-revision)
+    -   [Cultural Dimension](#cultural-dimension)
+        -   [The role of GDPs to facilitate learners to design for
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+            -   [Referring to GDPs (especially during playtesting) can
+                help scaffold the process of imagining the end user
+                experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
+            -   [GDPs, the scale/nature of project goals & designing for
+                others](#gdps-the-scalenature-of-project-goals-designing-for-others)
+            -   [Other examples and interpretation on designing for
+                others / shifts of
+                perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
+        -   [Role of playtesting and feedback and
+            GDPs](#role-of-playtesting-and-feedback-and-gdps)
+            -   [GDP concepts and language used in informal feedback for
+                peers to influence modification of
+                games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
+            -   [The propagation of use of GDPs through
+                playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
+        -   [GDPs facilitate the use of wider funds of
+            knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
+            -   [Family funds of knowledge](#family-funds-of-knowledge)
+            -   [Funds of knowledge from professional and enthusiast
+                communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
+    -   [Discussion on the use of game design patterns in the 3M
+        learning
+        design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
+        -   [Design patterns as a mid-level pedagogical
+            framework](#design-patterns-as-a-mid-level-pedagogical-framework)
+        -   [Discussion on GDPs, emerging processes and learner
+            agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
+            -   [Tensions between facilitating agency and norming
+                practices](#tensions-between-facilitating-agency-and-norming-practices)
+    -   [Chapter Conclusion](#chapter-conclusion)
+        -   [Summary of the pedagogical opportunities of Game Design
+            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
+        -   [Transition to next chapter](#transition-to-next-chapter)
+
+
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
 ## Research Questions - Feb 2024
@@ -1252,8 +1344,12 @@ The majority of this chapter has focused on interpretation of observations of pa
 
 In chapter two I described the characteristic and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
 
+---
+
+DROP THIS PARAGRAPH? OR COMPRESS AND TACK ON TO LAST ONE?
 This conception of levels abstraction can be applied in this learning design to the different scopes game making activity systems. Through this lens the most abstract activity system is the larger one who's objective, to make an engaging game that tells an environmental story, aligns with the problem level of LOA. The level between abstract and concrete is that of choosing, implementing and testing game design patterns, which aligns with design. The most concrete in this interpretation is then the implementation of different lines of code or creation and migration of digital assets.
 
+---
 
 
 <!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
@@ -1262,6 +1358,8 @@ This conception of levels abstraction can be applied in this learning design to 
 SHIFT LATER?
 
 As previously explored I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. -->
+
+RECAP OTHER WORK ON GDP AND THEIR USES - REINTERPRETE IT VIA AT CONCEPTS - MEDIATION
 
 In professional coding environment and training programmes design patterns are seen as a middle ground between abstract CT concepts and more concrete techniques. In chapter two I outlined the work of Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] which drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018]. In addition, when choosing design patterns, choosing a suitable the level of abstraction is recommended.  
 
@@ -1289,7 +1387,17 @@ There are challenges of the use of these short cuts and at a more general the de
 
 The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs. In this final section I continue to explore emerging thoughts on learner agency, the use of game design patterns, especially within the context of a collection of patterns.
 
+RECAP ON WHAT AGENCY IS HERE 
+
  <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
+
+#### GDPs used in mediational strategies and impact on participant agency
+
+GDPs are frequently used as mediational strategies [@lecusay_telementoring_2015].
+
+These process contributes to the development of agency on the part of participants.
+
+---
 
 The concept of a restricted activity is outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976]. In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
 
@@ -1317,6 +1425,9 @@ In computing eduction pattern based instruction has benefits of making complex p
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
 
+
+
+
 #### Tensions between facilitating agency and norming practices
 
 Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
@@ -1326,9 +1437,10 @@ However, as a seeming counterpoint to this growing agency is the norming effects
 <!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
 
 
-While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether.
+<!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
 
 SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
+
 
 
 ## Chapter Conclusion
