--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -10,7 +10,6 @@ number-sections: true
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
-
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - Feb 2024](#research-questions---feb-2024)
@@ -95,6 +94,9 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
             framework](#design-patterns-as-a-mid-level-pedagogical-framework)
         -   [Discussion on GDPs, emerging processes and learner
             agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
+            -   [GDPs used in mediational strategies and impact on
+                participant
+                agency](#gdps-used-in-mediational-strategies-and-impact-on-participant-agency)
             -   [Tensions between facilitating agency and norming
                 practices](#tensions-between-facilitating-agency-and-norming-practices)
     -   [Chapter Conclusion](#chapter-conclusion)
@@ -1387,7 +1389,7 @@ There are challenges of the use of these short cuts and at a more general the de
 
 The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs. In this final section I continue to explore emerging thoughts on learner agency, the use of game design patterns, especially within the context of a collection of patterns.
 
-RECAP ON WHAT AGENCY IS HERE 
+RECAP ON WHAT AGENCY IS HERE
 
  <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
 
