--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -1,12 +1,11 @@
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions - Feb 2023](#research-questions---feb-2023)
+    -   [Research Questions - Feb 2024](#research-questions---feb-2024)
+    -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
-    -   [Vignette illustrating shifts in scope of
-        activity](#vignette-illustrating-shifts-in-scope-of-activity)
-        -   [Vignette 4.1 - An example of game making
-            activity](#vignette-4.1---an-example-of-game-making-activity)
-            -   [Table of Vignette](#table-of-vignette)
+    -   [Vignette illustrating an example of game making
+        activity](#vignette-illustrating-an-example-of-game-making-activity)
+        -   [Table of Vignette](#table-of-vignette)
         -   [Description of levels of activity illustrated using the
             vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
             -   [Environmental factors and
@@ -22,11 +21,11 @@
         facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
-        -   [3. Tensions due to lack of access and familiarity to game
+        -   [Tensions due to lack of access and familiarity to game
             programming
             tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
-            -   [Design adaptations to facilitate novice use of a code
-                playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
+        -   [Design adaptations to facilitate novice use of a code
+            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
             -   [Addressing code syntax
                 errors](#addressing-code-syntax-errors)
             -   [Distributed vs. self-contained approaches to asset
