--- a/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
@@ -82,6 +82,9 @@
             framework](#design-patterns-as-a-mid-level-pedagogical-framework)
         -   [Discussion on GDPs, emerging processes and learner
             agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
+            -   [GDPs used in mediational strategies and impact on
+                participant
+                agency](#gdps-used-in-mediational-strategies-and-impact-on-participant-agency)
             -   [Tensions between facilitating agency and norming
                 practices](#tensions-between-facilitating-agency-and-norming-practices)
     -   [Chapter Conclusion](#chapter-conclusion)
